Check for headers before using them (compiles fine on Solaris without cdefs and err).

BUG: 99680

svn path=/trunk/kdepim/libkholidays/; revision=390522